--- a/index.html
+++ b/index.html
@@ -1,21 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
+<head> 
     <meta charset="UTF_-8">
     <title>Barbearia Alura</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <header>
+        <h1 class="titulo-principal">Barbearia alura</h1>
+    </header>
 
-    <h1>Sobre a Barbearia Alura</h1>
+    <img id="banner" scr="banner.jpg">
+    <div class="principal">
 
-    <p>Localizada no coração da cidade a Barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba. 
+    <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
+
+    <p> Localizada no coração da cidade a Barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba. 
 Fundada em 2019, <strong> Barbearia Alura</strong> já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-    <p><em> missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
+    <p id=missao><em> missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
     
     <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
 O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+
+  </div>
+
+<div class="beneficios">
+
+<h3 class="titulo-centralizado">beneficios</h3>
+<ul>
+
+    <li class="itens"> tendimento ao cliente </li>
+    <li class="itens"> espaço diferenciado </li>
+    <li class="itens"> lcalizaçao </li>
+    <li class="itens"> profissionais qualificados</li>
+
+</ul>
+<img scr="beneficios.jpg" class="imagembeneficios">
+</div>
+
 </body>
 </html>
