finalizando primeira pagina

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 class="titulo-principal">Barbearia alura</h1>
     </header>
 
-    <img id="banner" scr="banner.jpg">
+    <img id="banner" src="banner.jpg">
     <div class="principal">
 
     <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
@@ -38,7 +38,7 @@ O atendimento possui padrão de excelência e agilidade, garantindo qualidade e 
     <li class="itens"> profissionais qualificados</li>
 
 </ul>
-<img scr="beneficios.jpg" class="imagembeneficios">
+<img src="beneficios.jpg" class="imagembeneficios">
 </div>
 
 </body>
